Fixed sizing for text-field input to prevent wrapping error messages. Expanded field-label to allow for tooltip position overrideS

--- a/styles/material/md-input-container.styl
+++ b/styles/material/md-input-container.styl
@@ -1,3 +1,2 @@
 md-input-container {
-  display: inline-block !important;
 }
